# itergen

./: .gitignore  README.md  pyproject.toml  requirements.txt
itergen/: __init__.py  main.py
itergen/syncode/syncode/: __init__.py  dfa_mask_store.py  grammar_decoder.py  infer.py  language_model.py
itergen/syncode/syncode/parsers/: __init__.py  go_parser.py  incremental_parser.py  python_parser.py
